# Options_Trading

./: .env.example  .gitignore  CLAUDE.md  Codex-Prompt.md  HANDOFF.md  LICENSE  README.md  inspect_data.py  pyproject.toml  requirements.txt
.claude/skills/forensic-sweep/: SKILL.md
.claude/skills/multi-perspective/: SKILL.md
.claude/skills/self-audit/: SKILL.md
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: __init__.py  constants.py
dashboard/: utils.py  專案背景.py
dashboard/pages/: 1_定價核心.py  2_Walk-forward結果.py  3_Audit紀律與Bug修法.py
data/: taiex_daily.csv
docs/: bsm_derivation.md  options_math_audit.md  phase1_conclusion.md  roadmap.md  taifex_data_source_spec.md  week4_vol_surface_plan.md
reports/: week6_5yr_ablation_matrix.csv  week6_5yr_daily_pnl.csv  week6_5yr_folds.csv  week6_5yr_monitor_metrics.json  week6_5yr_no_cost_vs_with_cost.csv  week6_5yr_run_meta.json  week6_5yr_scenarios.csv  week6_5yr_summary.md  week6_smoke_ablation_matrix.csv  week6_smoke_daily_pnl.csv  week6_smoke_folds.csv  week6_smoke_monitor_metrics.json  week6_smoke_rejected_reasons.csv  week6_smoke_run_meta.json  week6_smoke_scenarios.csv  week6_smoke_summary.md  week7_feasibility.json  week7_smoke_daily_pnl.csv  week7_smoke_folds.csv  week7_smoke_monitor_metrics.json  week7_smoke_rejected_reasons.csv  week7_smoke_run_meta.json  week7_smoke_scenarios.csv
reports/week6_5yr_no_cost/: ablation_matrix.csv  folds.csv  monitor_metrics.json  run_meta.json  scenarios.csv  summary.md
reports/week7_5yr_no_cost/: week7_5yr_daily_pnl.csv  week7_5yr_folds.csv  week7_5yr_monitor_metrics.json  week7_5yr_run_meta.json  week7_5yr_scenarios.csv
reports/week7_5yr_with_cost/: week7_5yr_daily_pnl.csv  week7_5yr_folds.csv  week7_5yr_rejected_reasons.csv  week7_5yr_run_meta.json  week7_5yr_scenarios.csv
scripts/: __init__.py  _audit_week7_feasibility.py  _dummy_backtest_pipeline_check.py  _gated_strategy.py  _gated_vertical.py  _hedged_gated_ic.py  _validate_surface_mark_5_4a.py  _validate_surface_mark_5_4b.py  _validate_week6_5yr.py  _validate_week7_hedged_ic.py  audit_doc_drift.py  fetch_taiex.py  inspect_data.py  setup_windows_defender_exclusions.ps1  smoke_test.py  stress_test.py
src/backtest/: __init__.py  engine.py  execution.py  metrics.py  monitor.py  portfolio.py  stats.py  walk_forward.py
src/common/: __init__.py  types.py
src/data/: __init__.py  cache.py  enrich.py  schema.py  synthetic.py  taifex_loader.py
src/data/brokers/: __init__.py  base.py  shioaji_client.py
src/options/: __init__.py  chain.py  greeks.py  pricing.py  regime_gate.py  surface_batch.py  surface_cache.py  vol_surface.py
src/risk/: __init__.py  limits.py
src/strategies/: __init__.py  base.py  calendar_hedge.py  iron_condor.py  regime_wrapped.py  vertical.py  vertical_strategy.py
tests/: conftest.py
tests/backtest/: test_engine.py  test_execution.py  test_execution_retail_cost.py  test_metrics.py  test_monitor.py  test_portfolio.py  test_stats.py  test_walk_forward.py
tests/common/: test_types.py
tests/data/: test_cache.py  test_enrich.py  test_schema.py  test_synthetic.py  test_taifex_loader.py
tests/data/fixtures/: taifex_2018_01_oldest_sample.csv  taifex_2024_01_02_pre_20251208_sample.csv  taifex_2025_12_15_post_20251208_TXO_sample.csv
tests/integration/: test_dummy_pipeline_check.py
tests/options/: test_chain.py  test_greeks.py  test_pricing.py  test_regime_gate.py  test_surface_batch.py  test_surface_cache.py  test_vol_surface.py
tests/risk/: test_limits.py
tests/scripts/: test_audit_doc_drift.py  test_gated_ic_rejected_reasons.py  test_gated_vertical.py  test_validate_week6_5yr_gate.py
tests/strategies/: test_calendar_hedge.py  test_hedged_gated_ic.py  test_iron_condor.py  test_regime_wrapped.py  test_vertical.py  test_vertical_strategy.py
tests/stress/: test_stress.py
(+1227 files in other folders)
